--- a/css/testymonials.css
+++ b/css/testymonials.css
@@ -7,33 +7,22 @@
     padding-bottom: 50px;
 }
 
-.container {
-    padding: 0 16.64px;
-    max-width: 1185px;
-    margin: 0 auto;
-    height: 100%;
-}
-
-.testymonials__container {
+.container--testymonials {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
 .testymonials__title {
-    color: #FFF;
+    color: white;
     text-align: center;
     font-family: Sen;
     font-size: 144px;
     font-style: normal;
     font-weight: 800;
-    line-height: 96%; /* 138.24px */
+    line-height: 96%;
     text-transform: uppercase;
     margin-bottom: 80px;
-}
-
-.list {
-    list-style-type: none;
 }
 
 .testymonials__list {
@@ -43,7 +32,7 @@
     margin-bottom: 50px;
 }
 
-.list__item {
+.list__item--testymonials {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -53,46 +42,28 @@
     padding: 20px 50px;
 }
 
-.item__title {
-    color: #C98A40;
+.item__title--testymonials {
+    color: var(--accent-color);
     font-family: Poppins;
     font-size: 16px;
     font-style: normal;
     font-weight: 900;
-    line-height: 24px; /* 150% */
+    line-height: 24px;
     margin-bottom: 10px;
 }
 
-.item__description {
+.item__description--testymonials {
     color: black;
     font-family: Poppins;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 20px; /* 142.857% */
+    line-height: 20px;
     margin-bottom: 20px;
 }
 
-.list__score {
+.list__score--testymonials {
     display: flex;
     gap: 6px;
     color: var(--accent-color);
-}
-
-/* .score__star {} */
-
-.testymonials__button {
-    color: white;
-    cursor: pointer;
-    border-radius: 30px;
-    background: var(--button-color);
-    text-transform: uppercase;
-    border: none;
-    padding: 18px 38px;
-    width: 195px;
-    transition: 300ms;
-}
-
-.testymonials__button:active {
-    box-shadow: inset 0 0 20px 5px rgba(255, 255, 255, 0.3);
 }
