--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,13 @@ button {
     padding: 18px 38px;
     width: 195px;
     transition: 300ms;
+
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 24px;
 }
 
 button:active {
@@ -62,4 +69,4 @@ button:active {
 
 input {
     all: unset;
-  }
+}
