--- a/css/how-we-work.css
+++ b/css/how-we-work.css
@@ -15,6 +15,8 @@
 
 .how-we-work__container {
     position: relative;
+    padding-top: 50px;
+    padding-bottom: 68px;
 }
 
 .how-we-work__background {
@@ -55,6 +57,8 @@
 }
 
 .how-we-work__description p {
+    width: 277px;
+    padding-left: 30px;
     color: var(--accent-color);
     font-family: Poppins;
     font-size: 18px;
@@ -65,6 +69,7 @@
 
 .how-we-work__list {
     display: flex;
+    justify-content: center;
     gap: 20px;
     margin-bottom: 50px;
 }
