--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
     background-image: url(img/background.png);
     background-repeat: repeat;
 
-    font-family: 'Poppins', 'Sen' sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-family: 'Sen', sans-serif;
 
     font-weight: 900;
@@ -29,7 +29,8 @@ li {
     margin: 0;
 }
 
-ul, ol {
+ul,
+ol {
     list-style-type: none;
 }
 
@@ -46,6 +47,11 @@ button {
     border: none;
     padding: 18px 38px;
     width: 195px;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-weight: 900;
+    line-height: 24px;
     transition: 300ms;
 }
 
@@ -54,8 +60,8 @@ button:active {
 }
 
 .container {
-    padding: 0 16.64px;
-    max-width: 1185px;
+    padding: 0 15px;
+    max-width: 1230px;
     margin: 0 auto;
     height: 100%;
 }
