--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ li {
     margin: 0;
 }
 
-ul, ol {
+ul,
+ol {
     list-style-type: none;
 }
 
@@ -46,6 +47,12 @@ button {
     border: none;
     padding: 18px 38px;
     width: 195px;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 900;
+    line-height: 24px;
     transition: 300ms;
 }
 
@@ -55,6 +62,7 @@ button:active {
 
 .container {
     padding: 0 15px;
+    min-width: 1230px;
     max-width: 1230px;
     margin: 0 auto;
     height: 100%;
