--- a/styles.css
+++ b/styles.css
@@ -46,23 +46,29 @@ button {
     border: none;
     padding: 18px 38px;
     width: 195px;
-    transition: 300ms;
-
     text-align: center;
     font-family: Poppins;
     font-size: 18px;
     font-style: normal;
     font-weight: 900;
     line-height: 24px;
+    transition: all 300ms;
 }
 
 button:active {
-    box-shadow: inset 0 0 20px 5px rgba(255, 255, 255, 0.3);
+    background-color: var(--background-footer-color);
+    color: var(--accent-color);
+}
+
+button:hover {
+    box-shadow: 5px 5px 10px 5px rgba(0, 0, 0, 0.3),
+    -5px -5px 10px 5px rgba(0, 0, 0, 0.3); 
 }
 
 .container {
-    padding: 0 16.64px;
-    max-width: 1185px;
+    padding: 0 15px;
+    min-width: 1230px;
+    max-width: 1230px;
     margin: 0 auto;
     height: 100%;
 }
