fix services title margin

--- a/css/services.css
+++ b/css/services.css
@@ -18,7 +18,7 @@
     font-weight: 800;
     line-height: 96%;
     text-transform: uppercase;
-    margin: 50px;
+    margin: 0 50px 50px 50px;
 }
 
 .services__list { 
